samples/_failures_safe/1761317985_d5d940_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e72e3ad6.c: In function ‘main’:
./samples/SAFE/__tmp_e72e3ad6.c:194: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_e72e3ad6.c:193:5: error: expected declaration or statement at end of input
  193 |     if
      |     ^~
